# buffy

./: .gitignore  AUTHORS  COPYING  INSTALL  Makefile.am  NEWS  README  configure.in
buffyEro/: Makefile.am
buffyEro/gtk/: Makefile.am  gtkrc
buffyIno/: Makefile.am
buffyIno/gtk/: Makefile.am  gtkrc
buffyMagic/: Makefile.am
buffyMagic/gtk/: Makefile.am  gtkrc
buffyNess/: Makefile.am
buffyNess/gtk/: Makefile.am  gtkrc
buffyRio/: Makefile.am
buffyRio/gtk/: Makefile.am  gtkrc
gtk-engine/: Makefile.am  buffy.h  draw.c  interface.c  notif.c
